WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254910
[TextureMapper] Missing implementation of backingStoreMemoryEstimate
https://bugs.webkit.org/show_bug.cgi?id=254910
Summary
[TextureMapper] Missing implementation of backingStoreMemoryEstimate
Przemyslaw Gorszkowski
Reported
2023-04-03 02:54:46 PDT
This change is needed to add also memory usage report in WebInspector(memory timeline)
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-10 02:55:17 PDT
<
rdar://problem/107826522
>
Przemyslaw Gorszkowski
Comment 2
2023-05-24 02:21:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14286
EWS
Comment 3
2023-07-31 06:42:22 PDT
Committed
266424@main
(3ed63da0ea8d): <
https://commits.webkit.org/266424@main
> Reviewed commits have been landed. Closing PR #14286 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug